# demo-weaviate

./: README.md  gradio_interface.py  main.py  pyproject.toml  weaviate_service.py
